# h6x_serial_interface

./: CMakeLists.txt  README.md  package.xml
.github/workflows/: ci.yml  ci_galactic.yml  ci_humble.yml  release.yml
h6x_packet_handler/: CMakeLists.txt  package.xml
h6x_packet_handler/include/h6x_packet_handler/: crc_handler.hpp  hex_handler.hpp  packet_state_base.hpp  rx_ascii_packet.hpp  rx_packet_base.hpp  tx_ascii_packet.hpp  tx_packet_base.hpp  tx_rx_packet_base.hpp
h6x_packet_handler/src/: crc_handler.cpp  hex_handler.cpp
h6x_packet_handler/test/src/: test_crc_handler.cpp  test_hex_handler.cpp
h6x_serial_interface/: CMakeLists.txt  package.xml
h6x_serial_interface/include/h6x_serial_interface/: gmock_port_handler.hpp  h6x_serial_interface.hpp  hex_handler.hpp  libserial_helper.hpp  packet_state_base.hpp  port_handler.hpp  port_handler_base.hpp  rx_packet.hpp  serial_socket.hpp  serial_socket_impl.hpp  socket_handler.hpp  socket_handler_impl.hpp  tx_packet.hpp  tx_rx_packet.hpp
h6x_serial_interface/src/: hex_handler.cpp  libserial_helper.cpp  port_handler.cpp  serial_socket.cpp
h6x_serial_interface/test/src/: test_hex_handler.cpp
h6x_serial_interface_example/: CMakeLists.txt  package.xml
h6x_serial_interface_example/include/h6x_serial_interface_example/: simple_read_node.hpp  simple_read_until_node.hpp  simple_write_node.hpp
h6x_serial_interface_example/src/: simple_read_node.cpp  simple_read_until_node.cpp  simple_write_node.cpp
include/h6x_serial_interface/: h6x_serial_interface.hpp  port_handler.hpp  port_handler_base.hpp
src/: port_handler.cpp
